--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
+baseurl = "https://nyasaki.dev/"
 theme = "harbor"
-baseurl = "nyasaki.dev"
 title = "Dev Blog"
+author = "Marcel Walk"
 paginate = 5
 languageCode = "en"
 DefaultContentLanguage = "en"
@@ -13,7 +14,7 @@ footnoteReturnLinkContents = "^"
 [permalinks]
 	post = "/:year/:month/:day/:filename/"
 	page = "/:filename/"
-
+  
 [outputs]
   section = ["JSON", "HTML"]
 
@@ -29,13 +30,6 @@ footnoteReturnLinkContents = "^"
   name = "Tags"
   icon = "fas fa-tag fa-lg"
   url = "/tags/"
-  weight = 3
-
-[[params.nav]]
-  identifier = "categories"
-  name = "Category"
-  icon = "fas fa-folder-open fa-lg"
-  url = "categories"
   weight = 3
 
 [[params.nav]]
@@ -61,6 +55,10 @@ footnoteReturnLinkContents = "^"
   name="LinkedIn"
   url="https://www.linkedin.com/in/marcel-walk/"
   icon="fab fa-linkedin fa-lg"
+
+[params]
+  mainSections = ["post"]
+  favicon = "favicon.ico"
 
 [params.logo]
   url = "icon.png"
