--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ languageCode = "en"
 DefaultContentLanguage = "en"
 enableInlineShortcodes = true
 footnoteReturnLinkContents = "^"
+enableEmoji = true
 
 [Author]
   name = "Marcel Walk"
